--- a/front/src/app/layout/components/list-robot/list-robot.component.html
+++ b/front/src/app/layout/components/list-robot/list-robot.component.html
@@ -1,5 +1,5 @@
-<main class="flex-1 overflow-y-auto">
+<div class="flex flex-col container overflow-scroll">
   @for (robot of robots(); track robot) {
     <app-card [robot]="robot"/>
   }
-</main>
+</div>
