--- a/front/src/app/shared/card/card.component.html
+++ b/front/src/app/shared/card/card.component.html
@@ -1,5 +1,5 @@
 <a *ngIf="robot" [routerLink]="'robot-detail/' + robot.id" routerLinkActive>
   <div class="h-20 m-2 rounded-md bg-amber-50">
-    <h2>ROBOT</h2>
+    <h2>{{ robot.name}}</h2>
   </div>
 </a>
