--- a/front/src/app/layout/components/list-betting/list-betting.component.html
+++ b/front/src/app/layout/components/list-betting/list-betting.component.html
@@ -7,7 +7,7 @@
     }
   </div>
   <div>
-    <button class="mx-2 h-14 w-60 pointer-events-auto rounded-md bg-indigo-600 p-2 font-semibold leading-5 text-white hover:bg-indigo-500" (click)="validateBet()">
+    <button class="m-2 h-14 pointer-events-auto rounded-md bg-indigo-600 p-2 font-semibold leading-5 text-white hover:bg-indigo-500 bet-button" (click)="validateBet()">
       PARIER
     </button>
   </div>
