--- a/front/src/app/layout/components/header/header.component.html
+++ b/front/src/app/layout/components/header/header.component.html
@@ -4,6 +4,9 @@
       <div>
         <p class="text-6xl font-bold text-gray-50">RB</p>
       </div>
+      <div>
+        <button class="bg-gray-50 text-gray-800 font-bold py-2 px-4 rounded-md" (click)="startRace()">START RACE</button>
+      </div>
       <div class="flex mt-2">
         <p class="font-bold text-lg text-gray-50 mr-5">{{ currentUser.firstname + ' ' + currentUser.lastname }}</p>
         <p class="font-bold text-lg text-gray-50">betCoins: {{ currentUser.money }}</p>
