--- a/project/front/src/app/layout/components/header/header.component.html
+++ b/project/front/src/app/layout/components/header/header.component.html
@@ -1,11 +1,16 @@
 <div class="flex flex-col">
   <div class="flex justify-between">
     @if (currentUser(); as currentUser) {
-      <div>
-        <p class="text-6xl font-bold text-gray-50">RB</p>
+      <div class="flex items-end">
+        <p class="text-6xl font-bold text-gray-50">R</p>
+        <p class="font-bold text-gray-50">obot</p>
+        <p class="text-6xl font-bold text-gray-50">B</p>
+        <p class="font-bold text-gray-50">et</p>
       </div>
       <div>
-        <button class="bg-gray-50 text-gray-800 font-bold py-2 px-4 rounded-md" (click)="startRace()">START RACE</button>
+        <button class="bg-gray-50 text-gray-800 font-bold py-2 px-4 rounded-md" (click)="startRace()">DEMARRER LA
+          COURSE
+        </button>
       </div>
       <div class="flex mt-2">
         <p class="font-bold text-lg text-gray-50 mr-5">{{ currentUser.firstname + ' ' + currentUser.lastname }}</p>
