--- a/project/front/src/app/layout/components/list-betting/list-betting.component.html
+++ b/project/front/src/app/layout/components/list-betting/list-betting.component.html
@@ -1,14 +1,35 @@
-<div class="flex flex-col h-full">
-  <div class="flex flex-col m-2 container-bets rounded-md bg-amber-50">
-    @for(bet of betsSelected(); track bet) {
-      <app-bet-selected [bet]="bet"/>
-    } @empty {
-      <p class="font-bold text-2xl mx-auto my-2">AUCUN BET</p>
-    }
+@if (betsSelected(); as betsSelected) {
+  <div class="flex flex-col justify-between h-full">
+    <div class="flex flex-col m-2 container-bets rounded-md bg-amber-50">
+      @for (bet of betsSelected; track bet) {
+        <app-bet-selected [betSelected]="bet"/>
+      } @empty {
+        <p class="font-bold text-2xl mx-auto my-2">AUCUN BET</p>
+      }
+      @if (totalCoins() > 0) {
+        <p class="flex justify-center font-bold">TOTAL GAIN :{{ totalCoins() }}</p>
+      }
+    </div>
+    <div>
+      <button class="m-2 h-14 pointer-events-auto rounded-md p-2 font-semibold leading-5 text-white bet-button"
+              [disabled]="!betsSelected.length || validate()"
+              [ngClass]="!betsSelected.length || validate() ? 'bg-gray-400' : 'bg-indigo-600 hover:bg-indigo-500'"
+              (click)="validateBet()"
+      >
+        VALIDATION PARI
+      </button>
+    </div>
   </div>
-  <div>
-    <button class="m-2 h-14 pointer-events-auto rounded-md bg-indigo-600 p-2 font-semibold leading-5 text-white hover:bg-indigo-500 bet-button" (click)="validateBet()">
-      PARIER
-    </button>
-  </div>
-</div>
+
+  @if(validate() && openModal) {
+    <div class="fixed bottom-20 top-20 right-20 left-20 rounded-md bg-teal-950">
+      <div class="flex justify-end">
+        <button class="m-6 h-14 pointer-events-auto rounded-md p-2 font-semibold leading-5 text-white bg-black" (click)="closeModal()">FERMER</button>
+      </div>
+      <div class="flex flex-col justify-between content-center">
+        <p class="text-6xl font-bold text-gray-50">Votre pari vient d'être validé</p>
+        <p class="text-6xl font-bold text-gray-50">veuillez appuyer sur Démarrer et bonne chance</p>
+      </div>
+    </div>
+  }
+}
