add bet config and add robot picture

--- a/project/front/src/app/home/components/bet-card/bet-card.component.html
+++ b/project/front/src/app/home/components/bet-card/bet-card.component.html
@@ -1,5 +1,5 @@
 @if(betConfig(); as betConfig) {
-  <div class="m-2 rounded-md bg-amber-50">
+  <div class="m-2 rounded-md shadow-inner-xl bg-slate-200 min-w-64">
     @switch (betConfig.type) {
       @case (BetType.SIMPLE) {
         <div class="flex flex-col p-2">
@@ -10,13 +10,13 @@
             <div class="w-full flex flex-col">
               @for (run of betConfig.runners; track run) {
                 <div class="w-full flex justify-between">
-                  <div class="font-bold">{{ run.name }}</div>
+                  <div class="text-2xl content-center font-bold">{{ run.name }}</div>
                   <div>
                     <button
-                      class="m-2 h-14 w-20 pointer-events-auto rounded-md p-2 font-semibold leading-5 text-white bet-button justify-end"
+                      class="m-2 h-14 w-20 pointer-events-auto rounded-md p-2 shadow-2xl font-semibold leading-5 text-white bet-button justify-end"
                       (click)="bet(run, betConfig)"
-                      [disabled]="race().status === BetStatus.ACTIVE"
-                      [ngClass]="race().status === BetStatus.ACTIVE ? 'bg-gray-400' : 'bg-indigo-600 hover:bg-indigo-500'"
+                      [disabled]="raceActivated()"
+                      [ngStyle]="{'background-color': (raceActivated() ? '#a8a29e' : run.color) }"
                     >
                       {{ run.odds }}
                     </button>
