--- a/project/front/src/app/layout/components/list-robot/list-robot.component.html
+++ b/project/front/src/app/layout/components/list-robot/list-robot.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col container overflow-scroll">
+<div class="flex flex-col container-robot overflow-scroll">
   @for (robot of robots(); track robot) {
     <app-card [robot]="robot"/>
   }
