--- a/project/front/src/app/layout/components/header/header.component.html
+++ b/project/front/src/app/layout/components/header/header.component.html
@@ -7,14 +7,9 @@
         <p class="text-6xl font-bold text-gray-50">B</p>
         <p class="font-bold text-gray-50">et</p>
       </div>
-      <div>
-        <button class="bg-gray-50 text-gray-800 font-bold py-2 px-4 rounded-md" (click)="startRace()">DEMARRER LA
-          COURSE
-        </button>
-      </div>
       <div class="flex mt-2">
-        <p class="font-bold text-lg text-gray-50 mr-5">{{ currentUser.firstname + ' ' + currentUser.lastname }}</p>
-        <p class="font-bold text-lg text-gray-50">betCoins: {{ currentUser.money }}</p>
+        <p class="font-bold text-2xl text-gray-50 mr-5">{{ currentUser.firstname + ' ' + currentUser.lastname }}</p>
+        <p class="font-bold text-2xl text-gray-50">Coins: {{ currentUser.money }}</p>
       </div>
     }
   </div>
