--- a/project/front/src/app/layout/components/list-betting/components/bet-selected/bet-selected.component.html
+++ b/project/front/src/app/layout/components/list-betting/components/bet-selected/bet-selected.component.html
@@ -1,24 +1,28 @@
 @if(betSelected(); as betSelected) {
-    <div class="m-2 rounded-md bg-teal-500">
-      <div class="m-2 flex justify-between">
-        <p class="text-gray-50 font-bold">{{ betSelected.bet.name }}</p>
-        <button (click)="deleteBet(betSelected)">
-          <img ngSrc="assets/icons/delete-icon.png" width="30" height="30"/>
-        </button>
-      </div>
-      <p class="text-2xl font-bold text-gray-50 flex justify-center">Cote: {{ betSelected.odds}}</p>
-      <div class="flex justify-center items-center">
-        <button class="m-2 h-8 w-8 pointer-events-auto rounded-md p-2 font-semibold leading-5 text-white bet-button"
-                [disabled]="validate()"
-                [ngClass]="validate() ? 'bg-gray-400' : 'bg-indigo-600 hover:bg-indigo-500'"
+  <div class="m-2 rounded-md bg-sky-50 shadow-2xl">
+    <div class="m-2 flex justify-between">
+      <p class="text-gray-600 text-2xl font-bold">{{ betSelected.bet.name }}</p>
+      <button (click)="deleteBet(betSelected)">
+        <img ngSrc="assets/icons/delete.png" alt="" width="25" height="25"/>
+      </button>
+    </div>
+    <div class="flex justify-between m-2">
+      <p class="text-2xl my-2 px-4 pt-2 font-bold text-center text-gray-50 rounded-md"
+         [ngStyle]="{'background-color': betSelected.color}"
+      >Cote: {{ betSelected.odds}}</p>
+      <div class="flex justify-center m-2 items-center">
+        <button class="m-2 h-8 w-8 pointer-events-auto rounded-md p-2 font-semibold leading-4 text-white bet-button"
+                [disabled]="raceActivated()"
+                [ngClass]="raceActivated() ? 'bg-gray-400' : 'bg-sky-700 hover:bg-sky-500'"
                 (click)="updateValue(betSelected.bet.id, false)"> - </button>
-        <p>{{ betSelected.coins }}</p>
-        <button class="m-2 h-8 w-8 pointer-events-auto rounded-md p-2 font-semibold leading-5 text-white bet-button"
-                [disabled]="validate()"
-                [ngClass]="validate() ? 'bg-gray-400' : 'bg-indigo-600 hover:bg-indigo-500'"
+        <p class="text-gray-600 text-1xl font-bold">{{ betSelected.coins }}</p>
+        <button class="m-2 h-8 w-8 pointer-events-auto rounded-md p-2 font-semibold leading-4 text-white bet-button"
+                [disabled]="raceActivated()"
+                [ngClass]="raceActivated() ? 'bg-gray-400' : 'bg-sky-700 hover:bg-sky-500'"
                 (click)="updateValue(betSelected.bet.id, true)"> + </button>
       </div>
     </div>
+  </div>
 } @else {
     <div class="bet">
         <div class="bet__header">
