--- a/project/front/src/app/layout/layout.component.html
+++ b/project/front/src/app/layout/layout.component.html
@@ -1,15 +1,15 @@
 <div class="h-full flex flex-col my-0 mx-auto">
-  <div class="m-2 p-2 rounded-md bg-teal-700">
+  <div class="m-2 p-2 rounded-md bg-sky-900">
     <app-header></app-header>
   </div>
-  <div class="grid grid-cols-12 mx-2 gap-3 bg-amber-50">
-    <div class="col-span-2 rounded-md bg-teal-700">
+  <div class="grid grid-cols-12 mx-2 gap-3">
+    <div class="col-span-2 rounded-md bg-sky-900">
       <app-list-robot/>
     </div>
-    <div class="col-span-8 rounded-md bg-teal-700">
+    <div class="col-span-8 rounded-md bg-sky-900">
       <router-outlet/>
     </div>
-    <div class="col-span-2 rounded-md bg-teal-700">
+    <div class="col-span-2 rounded-md bg-sky-900">
       <app-list-betting/>
     </div>
   </div>
