--- a/project/front/src/app/robot-detail/robot-detail.component.html
+++ b/project/front/src/app/robot-detail/robot-detail.component.html
@@ -1,6 +1,6 @@
 @if(robot(); as robot) {
   <div class="py-5 px-3">
-    <a class="pointer-events-auto rounded-md bg-indigo-600 p-2 font-semibold leading-5 text-white hover:bg-indigo-500" routerLink="/">Retour</a>
+    <a class="pointer-events-auto rounded-md p-2 font-semibold leading-5 text-white bg-sky-700 hover:bg-sky-500" routerLink="/">Retour</a>
     <div class="mt-3">
       <pre>{{ robot | json }}</pre>
     </div>
