--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -15,3 +15,11 @@ html {
   width: 0;
   background: transparent;
 }
+
+.bot-point {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  margin-bottom: 5px;
+  transition: margin-left 1s linear;
+}
