create race view component, improve display

--- a/front/src/app/home/components/bet-card/bet-card.component.html
+++ b/front/src/app/home/components/bet-card/bet-card.component.html
@@ -1,29 +1,23 @@
-@if(betConfig(); as betConfig) {
-  <div class="m-2 rounded-md shadow-inner-xl bg-slate-200 min-w-64">
+@if (betConfig(); as betConfig) {
+  <div class="m-2 rounded-md shadow-inner-xl bg-slate-200">
     @switch (betConfig.type) {
       @case (BetType.SIMPLE) {
         <div class="flex flex-col p-2">
-          <div class="flex flex-row mb-4">
-            <p class="font-bold text-2xl">{{ betConfig.name }}</p>
-          </div>
-          <div class="flex flex-row justify-between">
-            <div class="w-full flex flex-col">
-              @for (run of betConfig.runners; track run) {
-                <div class="w-full flex justify-between">
-                  <div class="text-2xl content-center font-bold">{{ run.name }}</div>
-                  <div>
-                    <button
-                      class="m-2 h-14 w-20 pointer-events-auto rounded-md p-2 shadow-2xl font-semibold leading-5 text-white bet-button justify-end"
-                      (click)="bet(run, betConfig)"
-                      [disabled]="raceActivated()"
-                      [ngStyle]="{'background-color': (raceActivated() ? '#a8a29e' : run.color) }"
-                    >
-                      {{ run.odds }}
-                    </button>
-                  </div>
-                </div>
-              }
-            </div>
+          <p class="mb-4 font-bold text-base">{{ betConfig.name }}</p>
+          <div class="flex flex-col">
+            @for (runner of betConfig.runners; track runner) {
+              <div class="flex mb-2">
+                <div class="flex-auto w-64 text-sm content-center font-bold">{{ runner.name }}</div>
+                <button
+                  class="flex-auto w-32 h-8 pointer-events-auto rounded-md font-semibold text-white shadow-lg"
+                  (click)="bet(runner, betConfig)"
+                  [disabled]="raceActivated()"
+                  [ngStyle]="{'background-color': (raceActivated() ? '#a8a29e' : runner.color) }"
+                >
+                  {{ runner.odds }}
+                </button>
+              </div>
+            }
           </div>
         </div>
       }
