--- a/front/src/app/layout/components/list-robot/list-robot.component.html
+++ b/front/src/app/layout/components/list-robot/list-robot.component.html
@@ -1,5 +1,7 @@
-<div class="flex flex-col container-robot overflow-scroll">
-  @for (robot of robots(); track robot) {
-    <app-card [robot]="robot"/>
+<div class="flex flex-col container-robot overflow-auto">
+  @if (race(); as race) {
+    @for (robot of race.robots; track robot) {
+      <app-card [robot]="robot"/>
+    }
   }
 </div>
