--- a/front/src/app/layout/layout.component.html
+++ b/front/src/app/layout/layout.component.html
@@ -3,6 +3,9 @@
     <app-header></app-header>
   </div>
   <div class="grid grid-cols-12 mx-2 gap-3">
+    <div class="col-span-12 rounded-md bg-sky-900">
+      <app-race-view />
+    </div>
     <div class="col-span-2 rounded-md bg-sky-900">
       <app-list-robot/>
     </div>
