--- a/front/src/app/layout/components/list-betting/components/bet-selected/bet-selected.component.html
+++ b/front/src/app/layout/components/list-betting/components/bet-selected/bet-selected.component.html
@@ -1,22 +1,22 @@
 @if(betSelected(); as betSelected) {
   <div class="m-2 rounded-md bg-sky-50 shadow-2xl">
-    <div class="m-2 flex justify-between">
-      <p class="text-gray-600 text-2xl font-bold">{{ betSelected.bet.name }}</p>
+    <div class="mx-2 flex justify-between">
+      <p class="mt-2 text-gray-600 text-xs font-bold">{{ betSelected.bet.name }}</p>
       <button (click)="deleteBet(betSelected)">
         <img ngSrc="assets/icons/delete.png" alt="" width="25" height="25"/>
       </button>
     </div>
-    <div class="flex justify-between m-2">
-      <p class="text-2xl my-2 px-4 pt-2 font-bold text-center text-gray-50 rounded-md"
-         [ngStyle]="{'background-color': betSelected.color}"
-      >Cote: {{ betSelected.odds}}</p>
-      <div class="flex justify-center m-2 items-center">
-        <button class="m-2 h-8 w-8 pointer-events-auto rounded-md p-2 font-semibold leading-4 text-white bet-button"
+    <div class="flex flex-col justify-between pb-1">
+      <p class="text-xs m-1 p-1 font-bold text-center text-gray-50 rounded-md"
+         [ngStyle]="{'background-color': betSelected.color}">Cote: {{ betSelected.odds}}
+      </p>
+      <div class="flex justify-center m-1 items-center">
+        <button class="h-6 w-6 pointer-events-auto rounded-md font-semibold text-white bet-button"
                 [disabled]="raceActivated()"
                 [ngClass]="raceActivated() ? 'bg-gray-400' : 'bg-sky-700 hover:bg-sky-500'"
                 (click)="updateValue(betSelected.bet.id, false)"> - </button>
-        <p class="text-gray-600 text-1xl font-bold">{{ betSelected.coins }}</p>
-        <button class="m-2 h-8 w-8 pointer-events-auto rounded-md p-2 font-semibold leading-4 text-white bet-button"
+        <p class="text-gray-600 mx-1 text-1xl font-bold">{{ betSelected.coins }}</p>
+        <button class="h-6 w-6 pointer-events-auto rounded-md font-semibold text-white bet-button"
                 [disabled]="raceActivated()"
                 [ngClass]="raceActivated() ? 'bg-gray-400' : 'bg-sky-700 hover:bg-sky-500'"
                 (click)="updateValue(betSelected.bet.id, true)"> + </button>
