--- a/front/src/app/layout/components/list-robot/components/card/card.component.html
+++ b/front/src/app/layout/components/list-robot/components/card/card.component.html
@@ -1,6 +1,8 @@
-<a *ngIf="robot" [routerLink]="'robot-detail/' + robot.id" routerLinkActive>
-  <div class="flex justify-between h-20 m-2 rounded-md shadow-inner-xl bg-slate-200">
-    <h2 class="text-gray-600 ml-4 content-center font-bold text-2xl">{{ robot.name}}</h2>
-    <img [ngSrc]="robot.image" class="m-2 border-2 border-teal-800" alt="robot image" width="60" height="30">
+<a *ngIf="robot" [routerLink]="'robot-detail/' + robot.name" routerLinkActive>
+  <div class="flex h-10 m-1 rounded-md shadow-inner-xl bg-slate-200">
+    <h2 class="text-gray-600 flex-1 content-center text-center font-bold text-1s">{{ robot.name}}</h2>
+    <!-- TODO image in details -->
+<!--    <img [ngSrc]="'/assets/images/robot-bolt.jpg'"-->
+<!--         class="m-2 border-2 border-teal-800" alt="robot image" width="60" height="30">-->
   </div>
 </a>
