--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -12,8 +12,13 @@ html {
 }
 
 ::-webkit-scrollbar {
-  width: 0;
-  background: transparent;
+  width: 10px;
+  height: 10px;
+  background: #e0f2fe;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #0284c7;
 }
 
 .bot-point {
