--- a/front/src/app/race/race-view/race-view.component.html
+++ b/front/src/app/race/race-view/race-view.component.html
@@ -1,43 +1,62 @@
 <div class="flex flex-col">
-  <div class="m-2 p-2 bg-gray-400 h-96 rounded-md">
+  <div class="p-2 h-96 rounded-md">
     @if (raceInfos(); as race) {
-      <div class="flex flex-row justify-around">
+      <div class="flex flex-row justify-around p-2 rounded-md shadow-inner-xl bg-slate-200">
         <div class="grow">
-          Race status : {{ race.state }}
+          <span class="font-bold">Statut de la course :</span> {{ race.state }}
         </div>
         <div class="grow">
-          Race end bet time: {{ race.endBetTime | date:'H:mm:ss' }}
+          <span class="font-bold">Fin des paris :</span> {{ race.endBetTime | date:'H:mm:ss' }}
         </div>
         <div class="grow">
-          Race Start time: {{ race.startTime | date:'H:mm:ss' }}
+          <span class="font-bold">Début de la course :</span> {{ race.startTime | date:'H:mm:ss' }}
         </div>
       </div>
       @if (race.state === RaceState.BetsOpened) {
         @if (raceStartTime() > 0) {
-          <div class="flex flex-row">
-            Les paris seront cloturés dans {{ raceStartTime() }}s
+          <div class="grow-0 flex mt-16 justify-center">
+            <div class="flex flex-col p-4 rounded-md bg-sky-900 text-white">
+              <p class="">Les paris seront cloturés dans </p>
+              <p class="mt-4 text-4xl font-bold text-center">{{ raceStartTime() }}s</p>
+            </div>
           </div>
         }
-      } @else if (race.state === RaceState.BetsClosed || race.state === RaceState.InProgress) {
-        <ul>
-          @for (robot of race.robots; track robot.name) {
-            <li class="bot-point"
-                [ngStyle]="{'background-color': robot.color, 'margin-left': robot.state.distanceTraveled + 'px'}"></li>
-          }
-        </ul>
+      } @else if (race.state === RaceState.BetsClosed || race.state === RaceState.Started || race.state === RaceState.InProgress) {
+        <div class="flex mt-4">
+          <ul class="flex-1 overflow-hidden track" #raceTrack>
+            @for (robot of race.robots; track robot.name) {
+              <li>
+                <a class="bot-point" [attr.data-face]="robot.state.pace"
+                   [class.started]="race.state === RaceState.Started"
+                   [ngStyle]="{'background-color': robot.color, 'margin-left': robot.state.distanceTraveled / 1000 * raceTrack.clientWidth  + 'px'}"></a>
+              </li>
+            }
+          </ul>
+          <div class="finish-line"></div>
+        </div>
         @if (race.state === RaceState.BetsClosed) {
-          <div class="flex flex-row">
-            La course va bientôt débuter
+          <div class="grow-0 flex mt-4 justify-center">
+            <div class="flex flex-col p-4 rounded-md bg-sky-900 text-white">
+              <p>La course va bientôt débuter</p>
+            </div>
           </div>
         }
       }
 
       @if (race.state === RaceState.Finished) {
-        <ul>
-          @for (robot of race.robots; track robot.name) {
-            <li>{{ robot.name }} - {{ robot.state.distanceTraveled }} m</li>
-          }
-        </ul>
+        <div class="grow-0 flex mt-4 justify-center">
+          <div class="flex flex-col p-4 rounded-md bg-sky-900 text-white text-center">
+            <p class="text-4xl">Résultats</p>
+            <p class="firework"></p>
+            <p class="firework red"></p>
+            <p class="firework green"></p>
+            <ul>
+              @for (robot of courseResult(); track robot.name; let i = $index) {
+                <li>{{i + 1}} - {{ robot.name }}</li>
+              }
+            </ul>
+          </div>
+        </div>
       }
     } @else {
       <p>No race yet !</p>
