--- a/front/src/app/layout/components/header/header.component.html
+++ b/front/src/app/layout/components/header/header.component.html
@@ -2,10 +2,10 @@
   <div class="flex justify-between">
     @if (currentUser(); as currentUser) {
       <div class="flex items-end">
-        <p class="text-6xl font-bold text-gray-50">R</p>
-        <p class="font-bold text-gray-50">obot</p>
         <p class="text-6xl font-bold text-gray-50">B</p>
-        <p class="font-bold text-gray-50">et</p>
+        <p class="font-bold text-gray-50">ot</p>
+        <p class="text-6xl font-bold text-gray-50">R</p>
+        <p class="font-bold text-gray-50">ace</p>
       </div>
       <div class="flex mt-2">
         <p class="font-bold text-2xl text-gray-50 mr-5">{{ currentUser.firstname + ' ' + currentUser.lastname }}</p>
