--- a/front/src/app/robot-detail/robot-detail.component.html
+++ b/front/src/app/robot-detail/robot-detail.component.html
@@ -5,4 +5,11 @@
       <pre>{{ robot | json }}</pre>
     </div>
   </div>
+} @else {
+  <div class="py-5 px-3">
+    <a class="pointer-events-auto rounded-md p-2 font-semibold leading-5 text-white bg-sky-700 hover:bg-sky-500" routerLink="/">Retour</a>
+    <div class="mt-3">
+      <pre>Robot introuvable</pre>
+    </div>
+  </div>
 }
