--- a/presentation/css/custom.css
+++ b/presentation/css/custom.css
@@ -39,6 +39,27 @@ video {
 
 /* control-flow */
 
+.code-example-lg pre.code-wrapper {
+  width: 100%;
+}
+
+.control-flow-cover {
+  position: absolute;
+  margin: 8% 10%;
+  font-style: italic;
+  font-weight: bold;
+  background: rgb(133,20,245);
+  background: linear-gradient(90deg, rgba(133,20,245,1) 0%, rgba(253,29,29,1) 92%, rgba(250,44,5,1) 100%);
+  color: white;
+  width: 250px;
+  border-radius: 5px;
+}
+
+.control-flow-demo-image img {
+  max-width: 300px;
+  margin: 0 auto;
+}
+
 /* defer */
 
 /* signal */
