add zoneless slides, split race view component

--- a/front/src/app/layout/components/list-robot/list-robot.component.html
+++ b/front/src/app/layout/components/list-robot/list-robot.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col container-robot overflow-auto">
   @if (race(); as race) {
-    @for (robot of race.robots; track robot) {
+    @for (robot of race.robots; track robot.name) {
       <app-card [robot]="robot"/>
     }
   }
