--- a/front/src/app/home/home.component.html
+++ b/front/src/app/home/home.component.html
@@ -1,15 +1,17 @@
-<div class="flex flex-col h-full w-full">
+<div class="flex flex-col">
   <div class="grid grid-cols-3 container-bets overflow-auto rounded-md w-full">
-    @for (bet of bets(); track bet) {
-      <app-bet-card [betConfig]="bet"/>
-    } @empty {
-      <div>No bets found</div>
+    @if (betsOpened()) {
+      @for (bet of bets(); track bet) {
+        <app-bet-card [betConfig]="bet"/>
+      } @empty {
+        <div>No bets found</div>
+      }
     }
   </div>
   <div class="flex">
     <button class="flex-1 m-2 h-12 pointer-events-auto rounded-md p-2
     font-semibold leading-5 text-white bet-button bg-red-600 hover:bg-red-500 "
-      (click)="startRace()">
+            (click)="startRace()">
       Démarrer une nouvelle course
     </button>
   </div>
