change folder structure

--- a/front/src/app/features/bet/list-betting/components/bet-selected/bet-selected.component.html
+++ b/front/src/app/features/bet/list-betting/components/bet-selected/bet-selected.component.html
@@ -4,7 +4,7 @@
       <p class="mt-2 text-gray-600 text-xs font-bold">{{ betSelected.bet.name }}</p>
       @if (!betsClosed()) {
         <button (click)="deleteBet(betSelected)">
-          <img ngSrc="assets/icons/delete.png" alt="" width="25" height="25"/>
+          <img ngSrc="../../../../../assets/icons/delete.png" alt="" width="25" height="25"/>
         </button>
       }
     </div>
