--- a/front/src/app/features/robot/list-robot/list-robot.component.html
+++ b/front/src/app/features/robot/list-robot/list-robot.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col container-robot overflow-auto">
-  @if (race(); as race) {
-    @for (robot of race.robots; track robot.name) {
+  @if (robots(); as robots) {
+    @for (robot of robots; track robot.name) {
       <app-card [robot]="robot"/>
     }
   }
