adds conclusion slide

--- a/presentation/css/custom.css
+++ b/presentation/css/custom.css
@@ -153,3 +153,8 @@ video {
 /* conclusion */
 
 
+.conclusion-ng-next {
+  background: var(--ng-gradient);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
