adds quick race button

--- a/front/src/app/features/home/home.component.html
+++ b/front/src/app/features/home/home.component.html
@@ -10,9 +10,14 @@
   </div>
   <div class="flex">
     <button class="flex-1 m-2 h-12 pointer-events-auto rounded-md p-2
-    font-semibold leading-5 text-white bet-button bg-red-600 hover:bg-red-500"
-            (click)="startRace()">
-      Démarrer une nouvelle course
+    font-semibold leading-5 text-white bet-button bg-red-600 hover:bg-red-500 "
+            (click)="startRace(25000)">
+      Nouvelle course
+    </button>
+    <button class="flex-1 m-2 h-12 pointer-events-auto rounded-md p-2
+    font-semibold leading-5 text-white bet-button bg-red-600 hover:bg-red-500 "
+            (click)="startRace(8000)">
+      Course rapide
     </button>
   </div>
 </div>
