--- a/front/src/app/examples/signal/counter/components/counter-child/counter-child.component.html
+++ b/front/src/app/examples/signal/counter/components/counter-child/counter-child.component.html
@@ -1,2 +1,5 @@
-<h1>{{ timer() }}</h1>
-<button (click)="stopSetInterval()">Stop Effect</button>
+<div class="flex justify-center">
+  <h1 class="font-semibold leading-5">{{ timer() }}</h1>
+</div>
+<button (click)="stopSetInterval()" class="m-2 h-12 pointer-events-auto rounded-md p-2
+    font-semibold leading-5 text-white bet-button bg-red-400 hover:bg-red-800">Stop Effect</button>
