--- a/front/src/app/examples/signal/input/components/input-child/input-child.component.html
+++ b/front/src/app/examples/signal/input/components/input-child/input-child.component.html
@@ -1,3 +1,4 @@
 <div>
-  <button (click)="toggle()">Check</button>
+  <button (click)="toggle()" class="m-2 h-12 pointer-events-auto rounded-md p-2
+    font-semibold leading-5 text-white bet-button bg-red-400 hover:bg-red-800">Check</button>
 </div>
